New date format with timezone, old date format still readable and used for display

--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -1,2 +1,3 @@
 - Don't create new commit if the single previous commit refers to exact
   same tree or -force-commit is specified
+- Interpret paths in ccouch-config as relative
