--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -8,3 +8,11 @@
 - add cache-heads command
 
 - add support for x-ccouch-head:[//repo]/auth/.../(#|latest) URIs
+
+- Add option or wrapper for HttpBlobGetter to interpret .../ URIs as
+  HTML directory indexes and return a Directory object.
+
+- RdfNodes ought to read relative URIs as relative to the node's source URI.
+  I don't think I ever did this.
+
+- don't die just because can't write default config file 
