Changed Directory interface to be more compatible with Map (in case I ever want to make something that is both a Directory and a Map).  Created contentcouch.merge-directories active function.  A bunch of changes to path handling, mostly so that you can explore objects returned by arbitrary URIs (including active: ones) through the servlet.  Path handling could probably be cleaned up a bit, but I think it's better than it was.  And a few other things.

--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -1,4 +1,14 @@
+- Use TheGetter to get the generic getter.
+
 - While caching heads, should store heads in cache datastore, not just heads dir
 
 - RdfNodes ought to read relative URIs as relative to the node's source URI.
   I don't think I ever did this.
+
+- Centralize path handling
+  - Be able to create a URI to follow a path into any Directory
+  - appendPath('active:xyz', 'ferb/gerb') = 'active:follow-path+source@active:xyz+path@data:,ferb/gerb' 
+  - appendPath('foo/bar', 'ferb/gerb') = 'foo/bar/ferb/gerb'
+  - option to require '/' after last directory or not for path-based URIs
+
+- When downloading blobs from remote repos, if one repo gives a bad blob, try the next one. 
