--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -1,11 +1,5 @@
 - While caching heads, should store heads in cache datastore, not just heads dir
 
-- A single repository should be able to store separately:
-  - data/user   (what the user tells it to store)
-  - data/remote (blobs cached from remote repositories)
-  - data/active (cached function call results)
-  so that users don't have to set up 10 different repositories
-
 - RequestHandlers as a more featurified alternative to Getters
   - Allow requests with more information that only an identifier
     - verb (GET, POST, PUT)
@@ -32,13 +26,19 @@
   - appendPath('foo/bar', 'ferb/gerb') = 'foo/bar/ferb/gerb'
   - option to require '/' after last directory or not for path-based URIs
 
-- When downloading blobs from remote repos, if one repo gives a bad blob, try the next one.
-
 - Create functions to help make photo album pages:
   - active: -> urn:sha1:
   - urn:sha1: -> http:
 
 == Done ==
+
+* When downloading blobs from remote repos, if one repo gives a bad blob, try the next repo instead of just dying.
+
+* A single repository should be able to store separately:
+  - data/user   (what the user tells it to store)
+  - data/remote (blobs cached from remote repositories)
+  - data/active (cached function call results)
+  so that users don't have to set up 10 different repositories
 
 * URIs stored in .ccouch-commit-uris should be like x-parse-rdf:urn:sha1:..., not like
   x-parse-rdf:x-ccouch-head:togos-win/togos-image-archives/latest 
