--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -1,31 +1,11 @@
+- Better logging infrastructure
+  - Don't show 'GET xxx' message unless logging for that is turned on 
+
 - Remember the repository most recently successfuly downloaded from and
   download from it first.
 
-- RequestHandlers as a more featurified alternative to Getters
-  - Allow requests with more information that only an identifier
-    - verb (GET, POST, PUT)
-    - identifier
-    - ? content
-    - ? content metadata
-    - transaction metadata
-      - URI as it appears to end-user (for generating relative links) 
-  - Responses could contain
-    - content
-    - content metadata
-      - last-modified
-      - format/mime-type
-    - transaction metadata
-      - is the result cacheable?
-  - This should make MetadataHaver uneccessary, so delete it.
-      
 - RdfNodes ought to read relative URIs as relative to the node's source URI.
   I don't think I ever did this.
-
-- Centralize path handling
-  - Be able to create a URI to follow a path into any Directory
-  - appendPath('active:xyz', 'ferb/gerb') = 'active:follow-path+source@active:xyz+path@data:,ferb/gerb' 
-  - appendPath('foo/bar', 'ferb/gerb') = 'foo/bar/ferb/gerb'
-  - option to require '/' after last directory or not for path-based URIs
 
 - Create functions to help make photo album pages:
   - active: -> urn:sha1:
@@ -47,4 +27,12 @@
   x-parse-rdf:x-ccouch-head:togos-win/togos-image-archives/latest 
 
 * Use TheGetter to get the generic getter.
+
+* RequestHandlers as a more featurified alternative to Getters
+
+* Centralize path handling
+  * Be able to create a URI to follow a path into any Directory
+  * appendPath('active:xyz', 'ferb/gerb') = 'active:follow-path+source@active:xyz+path@data:,ferb/gerb' 
+  * appendPath('foo/bar', 'ferb/gerb') = 'foo/bar/ferb/gerb'
+  * option to require '/' after last directory or not for path-based URIs
  
