Updated README a bit

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 More conceptual details about ContentCouch can be found on the wiki at
 http://wiki.github.com/TOGoS/contentcouch and under doc/ in the project
-directory.  This file gives is intended only to help you get started
-using ContentCouch.
+directory.  This file is intended only to help you get started using
+ContentCouch at a basic level.
 
 == Repository set up ==
 
