--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -1,6 +1,7 @@
 - Create functions to help make photo album pages
   - Cache results of active functions in the datastore, remembering active:... -> urn:... mapping
-  - Function to create listing of photos referencing thumbnails
+  * Function to create listing of photos referencing thumbnails
+    /process?processor=contentcouch.photoalbum.make-album-page&uri=x-parse-rdf:urn:sha1:OCJIRSUCWLZGHKM5DXHDYQDI5IU6VVTD
 
 - RDFify should have option to use alternate RDF writing method for large documents
   - RDFDirectory objects would not be created - data would be serialized more directly
